--- a/index.html
+++ b/index.html
@@ -5,30 +5,22 @@
 
   var config = {
     categories: [
-      { name: "Learn", commands: [
-        { key: 'c', name: 'Coursera', url: 'https://www.coursera.org', search: '/courses?query=' },
-        { key: 'e', name: 'Egghead', url: 'https://egghead.io', search: '/search?q=' },
-        { key: 'K', name: 'Khan Academy', url: 'https://www.khanacademy.org', search: '/search?page_search_query=' },
-      ] },
-      { name: "Listen", commands: [
-        { key: 'h', name: 'Hypem', url: 'http://hypem.com', search: '/search/' },
-        { key: 'l', name: 'Line Radio', url: 'https://linerad.io', search: '/#/' },
-        { key: 's', name: 'SoundCloud', url: 'https://soundcloud.com', search: '/search?q=' },
-      ] },
+
       { name: "Work", commands: [
         { key: 'g', name: 'GitHub', url: 'https://github.com', search: '/search?q=' },
-        { key: 'm', name: 'Inbox', url: 'https://inbox.google.com', search: '/search/' },
-        { key: 'k', name: 'Keep', url: 'https://keep.google.com', search: '/#search/text=' },
+        { key: 'd', name: 'Google Drive', url: 'https://drive.google.com', search: '/search?q=' },
+        { key: 't', name: 'Translate', url: 'https://translate.google.com', search: '/#en/es/' },
+        { key: 'm', name: 'Google Maps', url: 'https://maps.google.com', search: '/search/' },
       ] },
       { name: "People", commands: [
         { key: 'r', name: 'Reddit', url: 'https://www.reddit.com', search: '/search?q=' },
+        { key: 'M', name: 'Menéame', url: 'https://www.meneame.net', search: '/search?q=' },
         { key: 't', name: 'Twitter', url: 'https://twitter.com', search: '/search?q=' },
         { key: 'i', name: 'Instagram', url: 'https://www.instagram.com', search: '/' },
       ] },
       { name: "Download", commands: [
         { key: 'T', name: 'The Pirate Bay', url: 'https://thepiratebay.org', search: '/search/' },
-        { key: 'Y', name: 'YIFY', url: 'https://yts.ag', search: '/browse-movies/' },
-        { key: '7', name: '7digital', url: 'https://us.7digital.com', search: '/search?q=' },
+
       ] },
     ],
 
