--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         { key: 'g', name: 'GitHub', url: 'https://github.com', search: '/search?q=' },
         { key: 'd', name: 'Google Drive', url: 'https://drive.google.com', search: '/search?q=' },
         { key: 't', name: 'Translate', url: 'https://translate.google.com', search: '/#en/es/' },
-        { key: 'm', name: 'Google Maps', url: 'https://maps.google.com', search: '/search/' },
+        { key: 'm', name: 'Google Maps', url: 'https://google.com/maps', search: '/search/' },
       ] },
       { name: "People", commands: [
         { key: 'r', name: 'Reddit', url: 'https://www.reddit.com', search: '/search?q=' },
