--- a/index.html
+++ b/index.html
@@ -5,17 +5,23 @@
 
   var config = {
     categories: [
+      { name: "Learn", commands: [
+        { key: 'ub', name: 'Universitat de Barcelona', url: 'https://ub.edu', search: '/dyn/cms/continguts_ca/Resultats.html?q=' },
+        { key: 'gu', name: 'University of Gothenburg', url: 'https://gu.se/english', search: '/?siteSearch=true&searchText=' },
+        { key: 'cth', name: 'Chalmers University of Technology', url: 'chalmers.se/en', search: '/search/Pages/default.aspx?q=' },
+      ] },
 
       { name: "Work", commands: [
-        { key: 'g', name: 'GitHub', url: 'https://github.com', search: '/search?q=' },
+        { key: 'gh', name: 'GitHub', url: 'https://github.com', search: '/search?q=' },
         { key: 'd', name: 'Google Drive', url: 'https://drive.google.com', search: '/search?q=' },
         { key: 't', name: 'Translate', url: 'https://translate.google.com', search: '/#en/es/' },
         { key: 'm', name: 'Google Maps', url: 'https://google.com/maps', search: '/search/' },
       ] },
-      { name: "People", commands: [
+      { name: "Social", commands: [
         { key: 'r', name: 'Reddit', url: 'https://www.reddit.com', search: '/search?q=' },
         { key: 'M', name: 'Menéame', url: 'https://www.meneame.net', search: '/search?q=' },
         { key: 't', name: 'Twitter', url: 'https://twitter.com', search: '/search?q=' },
+        { key: 'fb', name: 'FaceBook', url: 'https://www.facebook.com', search: '/' },
         { key: 'i', name: 'Instagram', url: 'https://www.instagram.com', search: '/' },
       ] },
       { name: "Download", commands: [
