Searching in Google Drive

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
       { name: "Work", commands: [
         { key: 'gh', name: 'GitHub', url: 'https://github.com', search: '/search?q=' },
-        { key: 'd', name: 'Google Drive', url: 'https://drive.google.com', search: '/search?q=' },
+        { key: 'd', name: 'Google Drive', url: 'https://drive.google.com', search: '/drive/u/0/search?q=' },
         { key: 't', name: 'Translate', url: 'https://translate.google.com', search: '/#en/es/' },
         { key: 'm', name: 'Google Maps', url: 'https://google.com/maps', search: '/search/' },
       ] },
