--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           { key: 'n', name: 'Netflix', url: 'https://www.netflix.com', search: '/search?q=' },
       ] },
       { name: "Download", commands: [
+          { key: 'a', name: 'Amazon', url: 'https://amazon.es', search: '/s/ref=nb_sb_noss?field-keywords=' },
         { key: 'T', name: 'The Pirate Bay', url: 'https://thepiratebay.se', search: '/search/' },
 
       ] },
