--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <main>
     <time id="js-clock"></time>
     <form id="js-search-form" autocomplete="off">
-        <input id="js-search-input" class="search-input" type="text" autofocus/>
+        <input id="js-search-input" class="search-input" type="text" autofocus autocorrect="off" autocapitalize="none" />
         <ul id="js-search-suggestions" class="search-suggestions"></ul>
     </form>
 </main>
