--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       ['Talk', 'Telegram', 'tg', 'https://web.telegram.org', null, '#5682a3', 'https://telegram.org/img/t_logo.png'],
       ['Talk', 'Discord', 'd', 'https://discordapp.com', null, '#7289da', 'https://p6.zdassets.com/hc/theme_assets/678183/200061268/logo_discord_menu.svg'],
       ['Talk', 'Slack', 's', 'https://slack.com', null, '#4C9689', 'https://brandfolder.com/slack/logo/slack-primary-logo.png'],
-    
+      ['Calc', 'Random', 'rand', 'https://random.org', '/search?q={}', '#ddd', 'http://userlogos.org/files/logos/Mafia_Penguin/Random.png'],
     ],
 
     // give suggestions as you type
@@ -75,6 +75,7 @@
       'l': ['l:electronic', 'l:chill', 'l:focus', 'l:sleep', 'l:ambient'],
       'r': ['r/r/unixporn', 'r/r/startpages', 'r/r/webdev', 'r/r/technology', 'r/r/portland'],
       's': ['s/you/likes', 's/discover/the-upload'],
+      'rand': ['rand/integers', 'rand/sequences', 'rand/passwords', 'rand/bytes'],
     },
 
     // instantly redirect when a key is matched
