--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       // ['Listen', 'Pandora', 'p', 'https://www.pandora.com', '/artist/{}', '#005483'],
       // ['Listen', 'SoundCloud', 's', 'https://soundcloud.com/discover', '/search?q={}', '#ff8800'],
       // ['Watch', 'Academy', 'A', 'https://www.khanacademy.org/', '/search?page_search_query={}', '#9cb443'],
+      ['Watch', 'IMDb', 'imdb', 'https://www.imdb.com', '/find?q={}', '#575757', 'http://ia.media-imdb.com/images/M/MV5BMTk3ODA4Mjc0NF5BMl5BcG5nXkFtZTgwNDc1MzQ2OTE@._V1_.png'],
       ['Watch', 'YouTube', 'y', 'https://youtube.com/feed/subscriptions', '/results?search_query={}', '#cd201f', 'https://www.youtube.com/yt/about/media/images/brand-resources/logos/YouTube-logo-full_color_light.svg'],
       ['Watch', 'Netflix', 'n', 'https://www.netflix.com/browse', '/search?q={}', '#000', 'https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg'],
       ['Watch', 'Amazon Video', 'av', 'https://www.primevideo.com/', '/search?q={}', '#222', 'http://static.tvgcdn.net/extimg/ovg_source_logos/source_aiv.svg'],
@@ -43,14 +44,14 @@
       // ['Download', 'Pirate Bay', 'b', 'https://thepiratebay.org', '/search/{}', '#4c4132'],
       // ['Download', 'YTS', 'Y', 'https://yts.gs/browse-movies/all/1080p/all/7/latest', '/browse-movies/{}', '#2f2f2f'],
       // TODO classify better
-      ['Search', 'Google Images', 'gi', 'https://google.es', '/search?q={}&tbm=isch', '#292929', 'https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png'],
+      ['Calc', 'Random', 'rand', 'https://random.org', '/search?q={}', '#ddd', 'http://userlogos.org/files/logos/Mafia_Penguin/Random.png'],
       ['Buy', 'Amazon', 'a', 'https://amazon.es', '/s/?field-keywords={}', '#f90', 'https://i.pinimg.com/originals/95/98/b4/9598b485d75c30986078655d68259c62.png'],
+      ['Search', 'Google Images', 'gi', 'https://google.es', '/search?q={}&tbm=isch', '#292929', 'https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png'],
       ['Search', 'Google Maps', 'maps', 'https://google.com/maps', '/maps/search/{}', 'lightgreen', 'https://png.icons8.com/google-maps/color/1600'],
       ['Search', 'Google Maps', 'gm', 'https://google.com/maps', '/maps/search/{}', 'lightgreen', 'https://png.icons8.com/google-maps/color/1600'],
       ['Talk', 'Telegram', 'tg', 'https://web.telegram.org', null, '#5682a3', 'https://telegram.org/img/t_logo.png'],
       ['Talk', 'Discord', 'd', 'https://discordapp.com', null, '#7289da', 'https://p6.zdassets.com/hc/theme_assets/678183/200061268/logo_discord_menu.svg'],
       ['Talk', 'Slack', 's', 'https://slack.com', null, '#4C9689', 'https://brandfolder.com/slack/logo/slack-primary-logo.png'],
-      ['Calc', 'Random', 'rand', 'https://random.org', '/search?q={}', '#ddd', 'http://userlogos.org/files/logos/Mafia_Penguin/Random.png'],
     ],
 
     // give suggestions as you type
